--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>قناة الدكتور السيد عادل - شرح المواد الشرعية</title>
   <meta name="description" content="قناة تعليمية لشرح المواد الشرعية بطريقة علمية واضحة وسهلة. دروس في الفقه، التفسير، الحديث، العقيدة، السيرة، التجويد وأصول الفقه.">
   <meta name="keywords" content="علم شرعي, دروس شرعية, فقه, تفسير, حديث, العقيدة, سيرة, تجويد, أصول الفقه, الدكتور السيد عادل">
+  <link rel="icon" type="image/jpeg" href="1.jpg">
+
   <style>
     :root{
       --bg:#f7f7fb;
@@ -121,4 +123,5 @@
     })();
   </script>
 </body>
+
 </html>
